Add reminders to me page
